--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-   "ownerNumberr": "62895379169488",
-   "ownerName": "X-None Team",
-   "botName": "X-None Bot",
+   "ownerNumberr": "62895325046253",
+   "ownerName": "Vex",
+   "botName": "Ryzen X",
    "apikeys": "fadlyid",
    "txtDonate": "Gopay : 08xxxxxxxxxx\nDana : 08xxxxxxxxxx\nOvo : 08xxxxxxxxxx\nSaweria : https://saweria.co/fadlyid",
    "pathImg": "./media/x-none.jpg",
