--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "X-None",
+  "name": "Vex",
   "version": "1.0.0",
   "description": "Created By X-None Team",
   "main": "main.js",
@@ -18,7 +18,7 @@
     "bot-whatsapp",
     "bot-whatsapp-termux"
   ],
-  "author": "X-None Team",
+  "author": "Vex",
   "license": "ISC",
   "dependencies": {
     "@adiwajshing/baileys": "^3.5.3",
